# V12

./: SapiRecorder.py  combine_cvss.py  record_trajectories.py  validate_trajectories.py
Collect_Prepare/: SapiRecorder.py  SapiRecorderThreeDotAUTO.py  SapiRecorderV2.py  combine_cvss.py  merge_segments.py  trajectory_splitter_adaptive.py
Current/: PHASE2_RESULTS.md  V2 to V3 Overal plan.txt  V3_IMPLEMENTATION_GUIDE.md  V3_PREPROCESSING_README.md  V3_SYSTEM_README.md  VALIDATION_REPORT.md  bspline.py  bspline_basis.py  generate_trajectory_v3.py  preprocess_singular_v3_basis_transform.py  test_end_to_end_synthetic.py  test_mean_centering_bug.py  test_orthogonalization_methods.py  test_orthonormality_fix.py  test_preprocessing_validation.py  test_reconstruction_debug.py  test_synthetic_pipeline.py  test_visual_pipeline_comparison.py  train_singular_diffusion_v1.py
Diffusion/: bspline_basis.py  generate_trajectory_v3.py  preprocess_singular_v3_basis_transform.py
Diffusion_Anchors/: generate_trajectory_v3.py  generate_trajectory_v5.py  preprocess_singular_v3_basis_transform.py  preprocess_singular_v4_continuous.py  preprocess_singular_v5_anticipatory.py  train_singular_diffusion_v1.py  train_singular_diffusion_v5.py
Diffusion_No_Anchors/: generate_trajectory_v3.py  preprocess_singular_v3_basis_transform.py  train_singular_diffusion_v1.py
SAPICPLUS/: CMakeLists.txt  Makefile  PrecomputedPaths.hpp  SapiRecorderBalanced.cpp  SapiRecorderBalanced.hpp  SapiRecorderBalanced.py  generate_balanced_sequence_v2_updated.py  precomputed_paths_v2.py  segment_0006.json
processed_v3_Anchors/: U_ref.npy  config.npy  group_anchors.npy  mean.npy  residual_mean.npy  residual_std.npy
processed_v3_No_Anchors/: coeff_mean.npy  coeff_std.npy  config.npy  (+2 more)
(+56 files in other folders)
